# agentic_devdocs

./: .gitignore  README.md  pyproject.toml
docs/: agent-guide.md  architecture.md  contract-reference.md
evals/: design_system_eval.yaml  moodle_devdocs_eval.yaml  multi_source_eval.yaml
schemas/: runtime_contract_v1.json  runtime_outer_v1.json
src/agentic_docs/: __init__.py  chunking.py  cli.py  config.py  evaluation.py  git_sync.py  ingest.py  models.py  parser.py  provenance.py  query_service.py  runtime_contract.py  site_ingest.py  storage.py  tokenizers.py  utils.py  wiki_ingest.py
tests/: conftest.py  test_chunking.py  test_cli.py  test_config.py  test_contract_schema.py  test_evaluation.py  test_models.py  test_parser.py  test_provenance.py  test_query_service.py  test_site_ingest.py  test_storage.py  test_tokenizers.py  test_wiki_ingest.py
